Add instances and users features
